# HelloFFmpeg

./: README.md
app/: build.gradle
app/src/androidTest/java/com/woniu0936/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  NativeFFmpeg.cpp  NativeFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/woniu0936/ffmpeg/: FFPlayer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/woniu0936/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
